browser/themes/shared/customizableui/panelUI.inc.css
/* ... */
#
PanelUI
-
quit
:
not
(
[
disabled
]
)
:
hover
{
background
-
color
:
#
d94141
;
outline
-
color
:
#
c23a3a
;
}
#
PanelUI
-
quit
:
not
(
[
disabled
]
)
:
hover
:
active
{
background
-
color
:
#
ad3434
;
outline
-
color
:
#
992e2e
;
}
#
customization
-
panelHolder
#
PanelUI
-
customize
{
color
:
white
;
background
-
color
:
hsl
(
108
66
%
30
%
)
;
text
-
shadow
:
none
;
margin
-
top
:
-
1px
;
}
#
customization
-
panelHolder
#
PanelUI
-
customize
+
toolbarseparator
{
display
:
none
;
}
#
customization
-
panelHolder
#
PanelUI
-
customize
:
hover
{
background
-
color
:
hsl
(
109
65
%
26
%
)
;
}
#
customization
-
panelHolder
#
PanelUI
-
customize
:
hover
:
active
{
background
-
color
:
hsl
(
109
65
%
22
%
)
;
}
#
customization
-
palette
.
toolbarbutton
-
multiline
-
text
#
customization
-
palette
.
toolbarbutton
-
text
{
display
:
none
;
}
panelview
.
toolbarbutton
-
1
.
subviewbutton
.
widget
-
overflow
-
list
.
toolbarbutton
-
1
.
panelUI
-
grid
.
toolbarbutton
-
1
>
.
toolbarbutton
-
menubutton
-
button
.
share
-
provider
-
button
:
root
:
not
(
[
photon
-
structure
]
)
.
toolbaritem
-
combined
-
buttons
inAnyPanel
>
toolbarbutton
{
-
moz
-
appearance
:
none
;
padding
:
0
6px
;
background
-
color
:
transparent
;
border
-
radius
:
2px
;
border
-
style
:
solid
;
border
-
color
:
transparent
;
}
panelview
.
toolbarbutton
-
1
.
subviewbutton
.
widget
-
overflow
-
list
.
toolbarbutton
-
1
.
share
-
provider
-
button
:
root
:
not
(
[
photon
-
structure
]
)
.
toolbaritem
-
combined
-
buttons
inAnyPanel
>
toolbarbutton
{
border
-
width
:
1px
;
}
.
subviewbutton
.
panel
-
subview
-
footer
{
border
-
radius
:
0
;
border
:
none
;
}
.
subviewbutton
.
panel
-
subview
-
footer
>
.
menu
-
text
{
-
moz
-
appearance
:
none
;
margin
-
inline
-
start
:
0px
!
important
;
padding
-
inline
-
start
:
6px
;
padding
-
inline
-
end
:
6px
;
-
moz
-
box
-
flex
:
0
;
text
-
align
:
center
;
}
.
subviewbutton
.
panel
-
subview
-
footer
>
.
toolbarbutton
-
icon
{
margin
:
0
;
}
panelview
:
not
(
[
mainView
]
)
.
subviewbutton
.
panel
-
subview
-
footer
>
.
toolbarbutton
-
text
{
text
-
align
:
center
;
padding
:
0
;
}
.
subviewbutton
.
panel
-
subview
-
footer
>
.
menu
-
accel
-
container
{
padding
-
inline
-
start
:
6px
;
}
.
subviewbutton
:
not
(
.
panel
-
subview
-
footer
)
{
margin
:
0
;
}
.
subviewbutton
:
not
(
.
panel
-
subview
-
footer
)
>
.
toolbarbutton
-
text
.
PanelUI
-
subView
.
subviewbutton
:
not
(
.
panel
-
subview
-
footer
)
>
.
menu
-
text
.
PanelUI
-
subView
.
subviewbutton
:
not
(
.
panel
-
subview
-
footer
)
>
.
menu
-
iconic
-
text
{
font
:
menu
;
}
.
subviewbutton
[
shortcut
]
:
:
after
{
content
:
attr
(
shortcut
)
;
float
:
right
;
color
:
GrayText
;
}
.
PanelUI
-
subView
.
subviewbutton
-
nav
:
:
after
{
-
moz
-
context
-
properties
:
fill
;
content
:
url
(
chrome
:
/
/
browser
/
skin
/
back
-
12
.
svg
)
;
fill
:
GrayText
;
float
:
right
;
}
.
PanelUI
-
subView
.
subviewbutton
-
nav
:
-
moz
-
locale
-
dir
(
ltr
)
:
:
after
{
transform
:
scaleX
(
-
1
)
;
}
.
subviewbutton
[
shortcut
]
:
:
after
.
subviewbutton
[
shortcut
]
:
:
after
.
PanelUI
-
subView
.
subviewbutton
-
nav
:
:
after
{
margin
-
inline
-
start
:
10px
;
}
#
PanelUI
-
characterEncodingView
-
autodetect
-
label
{
font
:
menu
;
color
:
inherit
;
}
.
cui
-
widget
-
panelview
.
subviewbutton
:
not
(
.
panel
-
subview
-
footer
)
{
margin
-
left
:
4px
;
margin
-
right
:
4px
;
}
.
widget
-
overflow
-
list
>
toolbarpaletteitem
[
place
=
panel
]
.
toolbarbutton
-
1
photonpanelmultiview
.
widget
-
overflow
-
list
.
toolbarbutton
-
1
photonpanelmultiview
.
PanelUI
-
subView
.
subviewbutton
photonpanelmultiview
.
cui
-
widget
-
panelview
.
subviewbutton
:
not
(
.
panel
-
subview
-
footer
)
photonpanelmultiview
.
subview
-
subheader
{
border
-
radius
:
0
;
border
-
width
:
0
;
margin
:
0
;
padding
:
4px
12px
;
}
photonpanelmultiview
.
subviewbutton
:
focus
{
outline
:
0
;
}
photonpanelmultiview
.
subviewbutton
>
.
toolbarbutton
-
text
{
padding
:
0
;
padding
-
inline
-
start
:
24px
;
}
photonpanelmultiview
.
subviewbutton
-
iconic
>
.
toolbarbutton
-
text
photonpanelmultiview
.
cui
-
withicon
>
.
toolbarbutton
-
text
photonpanelmultiview
.
subviewbutton
[
image
]
>
.
toolbarbutton
-
text
photonpanelmultiview
.
subviewbutton
[
checked
=
"
true
"
]
>
.
toolbarbutton
-
text
{
padding
-
inline
-
start
:
8px
;
}
photonpanelmultiview
.
panel
-
banner
-
item
>
.
toolbarbutton
-
multiline
-
text
{
font
:
menu
;
padding
:
0
;
padding
-
inline
-
start
:
8px
;
}
photonpanelmultiview
.
subviewbutton
{
-
moz
-
context
-
properties
:
fill
;
fill
:
currentColor
;
}
photonpanelmultiview
.
subviewbutton
[
checked
=
"
true
"
]
{
background
:
none
;
list
-
style
-
image
:
url
(
chrome
:
/
/
browser
/
skin
/
check
.
svg
)
;
}
photonpanelmultiview
.
subviewbutton
>
.
menu
-
iconic
-
left
{
-
moz
-
appearance
:
none
;
margin
-
inline
-
end
:
0
;
}
photonpanelmultiview
.
toolbaritem
-
combined
-
buttons
inAnyPanel
{
-
moz
-
box
-
align
:
center
;
-
moz
-
box
-
orient
:
horizontal
;
border
:
0
;
border
-
radius
:
0
;
margin
-
inline
-
end
:
8px
;
}
photonpanelmultiview
.
toolbaritem
-
combined
-
buttons
>
label
{
-
moz
-
box
-
flex
:
1
;
font
:
menu
;
margin
:
0
;
padding
-
inline
-
start
:
36px
;
}
photonpanelmultiview
.
PanelUI
-
subView
.
toolbaritem
-
combined
-
buttons
>
.
subviewbutton
{
-
moz
-
box
-
flex
:
0
;
height
:
auto
;
margin
-
inline
-
start
:
18px
;
min
-
width
:
auto
;
padding
:
4px
;
}
#
appMenu
-
zoom
-
controls
>
.
subviewbutton
{
margin
-
inline
-
start
:
10px
;
}
.
toolbaritem
-
combined
-
buttons
>
toolbarseparator
[
orient
=
"
vertical
"
]
+
.
subviewbutton
#
appMenu
-
zoom
-
controls
>
toolbarseparator
[
orient
=
"
vertical
"
]
+
.
subviewbutton
{
margin
-
inline
-
start
:
0
;
}
/* ... */

