Bug 1354086 - update styling of combined buttons in the overflow panel, r=mikedeboer
MozReview-Commit-ID: Kk1QkOU6GZz

UltraBlame original commit: 48e18b6a3c7ccc17ac59efa994d2b26268a59d26

--- a/browser/themes/shared/customizableui/panelUI.inc.css
+++ b/browser/themes/shared/customizableui/panelUI.inc.css
@@ -9840,14 +9840,16 @@ end
 0
 ;
 }
-photonpanelmultiview
+#
+appMenu
+-
+popup
 .
 toolbaritem
 -
 combined
 -
 buttons
-inAnyPanel
 {
 -
 moz
@@ -12081,6 +12083,9 @@ height
 37px
 ;
 }
+%
+ifndef
+MOZ_PHOTON_THEME
 .
 toolbaritem
 -
@@ -12223,17 +12228,8 @@ top
 1px
 ;
 }
-:
-root
-:
-not
-(
-[
-photon
--
-structure
-]
-)
+%
+endif
 .
 toolbaritem
 -
@@ -12248,11 +12244,6 @@ border
 :
 0
 ;
-padding
-:
-.
-5em
-;
 margin
 :
 0
@@ -12266,6 +12257,9 @@ flex
 :
 1
 ;
+%
+ifndef
+MOZ_PHOTON_THEME
 min
 -
 width
@@ -12284,6 +12278,11 @@ calc
 menuPanelButtonWidth
 )
 ;
+padding
+:
+.
+5em
+;
 height
 :
 calc
@@ -12301,6 +12300,22 @@ height
 :
 none
 ;
+%
+else
+padding
+-
+top
+:
+4px
+;
+padding
+-
+bottom
+:
+4px
+;
+%
+endif
 -
 moz
 -
@@ -12311,17 +12326,50 @@ orient
 horizontal
 ;
 }
-:
-root
-:
-not
-(
+%
+ifdef
+MOZ_PHOTON_THEME
+toolbarpaletteitem
 [
-photon
--
-structure
+place
+=
+panel
 ]
+>
+.
+toolbaritem
+-
+combined
+-
+buttons
+>
+toolbarbutton
+{
+min
+-
+width
+:
+calc
+(
+menuPanelButtonWidth
+-
+1px
 )
+;
+max
+-
+width
+:
+calc
+(
+menuPanelButtonWidth
+-
+1px
+)
+;
+}
+%
+else
 #
 edit
 -
@@ -12332,17 +12380,6 @@ inAnyPanel
 copy
 -
 button
-:
-root
-:
-not
-(
-[
-photon
--
-structure
-]
-)
 #
 zoom
 -
@@ -12379,6 +12416,8 @@ menuPanelButtonWidth
 )
 ;
 }
+%
+endif
 #
 main
 -
@@ -13061,6 +13100,9 @@ start
 5em
 ;
 }
+%
+ifndef
+MOZ_PHOTON_THEME
 .
 widget
 -
@@ -13213,6 +13255,8 @@ hsla
 )
 ;
 }
+%
+endif
 .
 subviewbutton
 [
